<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">使徒行善</string>
    <string name="tv_main_userid">User Id:</string>
    <string name="tv_main_username">User Name:</string>
    <string name="title_activity_project">Project List</string>
    <string name="action_settings">Settings</string>
    <string name="demo">demo string</string>
    <!-- <string name="text_listiem_info"><font color="red">%1$s</font> people hava donated\n<font color="red">%2$s</font> RMB has been collected</string> -->
    <string name="title_activity_project_detail">Project Detail</string>
    <string name="text_listiem_info">目前共有%1$s位使徒捐款\n总共筹集%2$s元爱心善款</string>
    <string name="text_detail_info">目前共有%1$s位使徒捐款，总共筹集%2$s元爱心善款</string>
    <string name="donate">I wanna donate!</string>
    <string name="title_activity_task">Task List</string>
    <string name="text_listiemq_info">目前共有%1$s人完成任务\n</string>
    <string name="text_list_loading">Loading data...</string>
    <string name="title_activity_task_detail">Task Detail</string>
    <string name="task_finished">Congratulations! You earned 10 points!</string>
    <string name="title_activity_start"></string>
    <!-- empty string -->
    <string name="text_start_info1">Do you like Line Walker? \n Maybe you are a fan of it, right? \nChoose the character you wanna be</string>
    <string name="character_sed">Smart Sed</string>
    <string name="character_ding">Clever Ding</string>
    <string name="text_start_enter">Start your Mission</string>
    <string name="text_start_info2">Now you are a Line Walker!\n Your mission is to help others!\n Before that you should finish some tasks!</string>
    <string name="text_start_info3">Congratulations!\n Thank you for joining us!\nRemember to finish your mission!</string>
    <string name="title_activity_guide">Guide</string>
    <string name="text_start_swipe"> Swipe left to continue </string>
    <string name="text_main_projects">Projects</string>
    <string name="text_main_tasks">Tasks</string>
    <string name="tv_main_userlevel">User level:</string>
    <string name="title_activity_donate">Donate</string>
    <string name="text_start_welcome">Welcome to Line Walker!</string>
    <string name="text_start_copyright">Copyright © 2014 - Javay, Tsinghua University</string>
    <string name="text_donate_channel">Choose a channel</string>
    <string name="btn_donate_pay">Pay!</string>
    <string name="text_donate_money">Input your donation amount</string>
    <string name="text_donate_note">温馨提示:由于比赛阶段移动支付平台Ping++提供的支付功能是处于测试环境中，所以并不会产生真正的交易[大家可以放心地任意捐款]，只要是返回支付成功的信息都算是捐款成功！另外，积分与人民币的兑换规则是每10个积分等于1元人民币！如果选择微信支付(支付宝支付/银联支付)请确保您的手机安装了微信客户端(支付宝客户端/银联手机支付插件)。万分谢谢您的试用，感谢您对爱心项目的慷慨解囊和对使徒行善的大力支持！</string>
    <string name="text_donate_pointspay">Points Pay (You have %1$s points=%2$s RMB)</string>
    <string name="text_donate_wechatpay">WeChat Pay</string>
    <string name="text_donate_alipay">AliPay</string>
    <string name="text_donate_upmp">UnionPay</string>
    <string name="text_donate_cancel">User canceled</string>
    <string name="text_donate_invalid">An invalid Credential was submitted</string>
    <string name="text_donate_success">Thank you for your kindness!</string>
    <string name="text_donate_fail">Payment fail! Still thank you for your kindness!</string>
    <string name="text_donate_amoutempty">Please input your donation amout</string>
    <string name="text_donate_amoutpoints">Your points are not enough to pay!</string>
    <string name="text_main_points">Points Remain</string>
    <string name="text_main_donations">Total Donations</string>

</resources>
