<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".DonateActivity">

    <LinearLayout
        android:id="@+id/ll_donate_channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/text_donate_channel" />

        <RadioGroup
            android:id="@+id/rg_donate_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_donate_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/text_donate_pointspay" />

            <RadioButton
                android:id="@+id/rb_donate_wechat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/text_donate_wechatpay" />

            <RadioButton
                android:id="@+id/rb_donate_ali"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/text_donate_alipay" />

            <RadioButton
                android:id="@+id/rb_donate_upmp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/text_donate_upmp" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_donate_channel"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/text_donate_money" />

        <EditText
            android:id="@+id/et_donate_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btn_donate_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:text="@string/btn_donate_pay"
                android:fontFamily="sans-serif-condensed"
                android:background="@drawable/ps__button_forrst"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-condensed"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/shanshan_darkviolet"
                android:text="@string/text_donate_note" />

        </LinearLayout>

    </FrameLayout>


</RelativeLayout>
