<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="shanshan.tsinghua.edu.cn.shanshan.ProjectDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_detail_imgfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/demo" />

            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/demo" />

            <TextView
                android:id="@+id/tv_detail_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:textAppearance="?android:textAppearanceSmall"
                android:text="@string/text_detail_info"
                android:textStyle="bold"
                android:textColor="@color/darkorange" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/ps__button_skype"
                android:text="@string/donate"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:onClick="btn_detail_donate"
                />

            <TextView
                android:id="@+id/tv_detail_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/shanshan_grey"
                android:text="@string/demo" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
