<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/shanshan_satrt_red">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:scaleType="centerInside"
        android:src="@drawable/circle1"
        android:layout_gravity="center_horizontal" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/text_start_info1" />

    <!--this will slow down the speed!!!-->

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--android:paddingLeft="10dp" round-->
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:adjustViewBounds="true"
                android:background="@drawable/image_round"
                android:src="@drawable/sed1" />

            <RadioButton
                android:id="@+id/rb_start_sed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="center"
                android:text="@string/character_sed"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed"
                android:textAppearance="?android:textAppearanceSmall"
                android:checked="true"
                android:onClick="rb_start_character" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:adjustViewBounds="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/image_round"
                android:src="@drawable/ding1" />

            <RadioButton
                android:id="@+id/rb_start_ding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/character_ding"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed"
                android:textAppearance="?android:textAppearanceSmall"
                android:onClick="rb_start_character" />

        </LinearLayout>

    </RadioGroup>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/text_start_swipe" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>
